@@ -21,7 +21,7 @@ Generate a simple diagram of a soil profile, with annotated horizon names.
 }}
 
 \usage{
-plotSPC(x, color='soil_color', width=0.2, name='name', 
+plotSPC(x, color='soil_color', width=0.2, name='name', alt.label=NULL,
 cex.names=0.5, cex.depth.axis=cex.names, cex.id=cex.names+(0.2*cex.names), print.id=TRUE, 
 id.style='auto', plot.order=1:length(x), add=FALSE, scaling.factor=1, y.offset=0, n=length(x),
 max.depth=max(x), n.depth.ticks=5, shrink=FALSE, shrink.cutoff=3, abbr=FALSE, 
@@ -36,6 +36,7 @@ hz.distinctness.offset.lty=2, axis.line.offset=-2.5, \dots)
   \item{color}{the name of the column containing R-compatible color descriptions}
   \item{width}{scaling of profile widths}
   \item{name}{the name of the column containing the horizon designation}
+  \item{alt.label}{the name of a column in @site used for seconary annotation}
   \item{cex.names}{character scaling applied to horizon names}
   \item{cex.depth.axis}{character scaling applied to depth scale}
   \item{cex.id}{character scaling applied to profile id}
